bdr.BDR.scala.error
Compilation error:
BDR:3: error: not found: value char
  if (char getIndication()=='R'){
      ^BDR:6: error: not found: value char
  else if (char getIndication()=='L'){
           ^BDR:9: error: not found: value char
  else if (char getIndication()=='I'){
           ^BDR:13: error: not found: value char
  else if (char getIndication()=='A'){
           ^BDR:15: error: not found: value char
  else if (char getIndication()=='B'){
           ^BDR:17: error: not found: value char
  else if (char getIndication()=='C'){
           ^BDR:19: error: not found: value char
  else if (char getIndication()=='Z'){
           ^BDR:21: error: not found: value char
  else if (char getIndication()=='Y'){
           ^BDR:23: error: not found: value char
  else if (char getIndication()=='X'){
           ^